feat(vendors): update vendor api and web ui for components and markets
